--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'JetBrains Mono', monospace; /* Normal text uses JetBrains Mono */
     font-style: italic;
     color: #FFFBEF;
+     margin: 0 auto;    /* Center the element */
+    padding: 10px 0;   /* Apply controlled padding */
+    text-align: right; /* Keep text aligned to the right */
+    overflow: hidden;  /* Hide overflow */
 }
 
 /* Links */
@@ -39,9 +43,12 @@ a:hover {
     background-image: url("images/indexpage_header_image.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0;  /* Remove unnecessary padding */
+    margin: 0;   /* Remove unnecessary margin */
     height: 300px;
     width: 100%;
     text-align: justify;
+    overflow: hidden;
 }
 
 /* Card Styles */
@@ -65,6 +72,13 @@ a:hover {
     cursor: pointer;
     border-radius: 5px;
     margin-top: 5px;
+}
+
+.row {
+    margin: 0; /* Remove any negative margins that could cause overflow */
+    padding: 0;
+    width: 100%;
+    overflow: hidden; /* Ensure no overflow occurs */
 }
 
 /* Modal styles */
