--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ footer {
     text-align: left;
     margin-top: -30px; /* Adjust this value to make the pin overlap slightly with the header */
     position: relative;
-    left: 10px; /* Move the pin 10px to the right */
+    padding-left: 10px; /* Move the pin 10px to the right */
     z-index: 10; /* Ensures the pin appears above the content */
 }
 
@@ -245,4 +245,38 @@ footer {
     height: 60px;
     padding: 5px; /* Space around the icon */
     display: inline-block;
+}
+
+.gallery {
+    max-width: 1200px;
+    margin: 0 auto;
+    column-count: 4;
+}
+
+.gallery-item {
+    break-inside: avoid;
+    margin-bottom: 16px;
+}
+
+.gallery-item img {
+    width: 100%;
+    border-radius: 14px;
+}
+
+@media screen and (max-width: 500px) {
+    .gallery {
+        column-count: 1;
+    }
+}
+
+@media screen and (min-width: 501px) and (max-width: 700px) {
+    .gallery {
+        column-count: 2;
+    }
+}
+
+@media screen and (min-width: 701px) and (max-width: 900px) {
+    .gallery {
+        column-count: 3;
+    }
 }
